# looped

./: .gitignore  README.md  looped.db  pyproject.toml
docs/: architecture.md
src/looped/: __init__.py  app.py
src/looped.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/looped/audio/: __init__.py
src/looped/audio/backends/: __init__.py  base.py  qt_backend.py  routing_stubs.py
src/looped/db/: __init__.py  schema.sql
src/looped/domain/: __init__.py  models.py
src/looped/persistence/: __init__.py  database.py  playlist_item_repository.py  repositories.py
src/looped/services/: clip_service.py  library_service.py  playlist_service.py  waveform_service.py
src/looped/ui/: clip_editor_dialog.py  edit_track_dialog.py  formatting.py  main_window.py  track_table_widget.py  waveform_widget.py
