[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "looped"
version = "0.1.0"
description = "Local desktop audio player and clip replay MVP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "audioread>=3.0",
  "PySide6>=6.7",
  "mutagen>=1.47",
]

[project.scripts]
looped = "looped.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
looped = ["db/schema.sql"]
